# running-stats-py

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  Makefile  README.md  pyproject.toml  pyrightconfig.json  setup.cfg
.github/workflows/: build-publish.yml  build.yml  check.yml  release.yml  scheduled.yml  test.yml
running_stats/: running_mean_var.py  running_stats.py
src/running_stats/: running_stats.py
tests/: test_running_stats.py
