[metadata]
name = running-stats
summary = Library for computing linear statistics.
author = Kristoffer Andersson
author_email = kod.kristoff@gmail.com
description-file = README.md
description-content-type = text/markdown
home-page = https://github.com/kod-kristoff/running-stats-py
project_urls =
    Bug Tracker = https://github.com/kod-kristoff/running-stats-py/issues
    # Documentation = https://github.
    Source Code = https://github.com/kod-kristoff/running-stats-py
license = MIT
classifier =
        # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
        Development Status :: 2 - Pre-Alpha
        # Development Status :: 5 - Production/Stable
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Operating System :: Unix
        Operating System :: POSIX
        # Operating System :: Microsoft :: Windows
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: Implementation :: CPython
        # uncomment if you test on these interpreters:
        # 'Programming Language :: Python :: Implementation :: IronPython',
        # 'Programming Language :: Python :: Implementation :: Jython',
        # 'Programming Language :: Python :: Implementation :: Stackless',
        Topic :: Utilities

[files]
packages =
    running_stats

[extras]
dev =
    black
test =
    pytest
    pytest-cov
    codecov
    pylint
    hypothesis
    attrs>=19.2

[tool:pytest]
testpaths = tests
junit_family = legacy
# addopts = --cov-config=setup.cfg --cov=karp5 --cov-report=term-missing

[coverage:run]
branch = true
source =
    running_stats
omit = tests/*

[pytype]
inputs = running_stats

[pycodestyle]
max-line-length=120

[flake8]
max-line-length=120
